# Checkers

./: .gitignore  Checkers.sln  README.md
Checkers/: CMakeLists.txt  Checkers.vcxproj  Checkers.vcxproj.filters  GPU.cpp  GPU.h  Makefile  common.cpp  common.h  game.txt  human_player.cpp  human_player.h  kernel.cu  main.cpp  mcts_kernel.cu  mcts_kernel.cuh  mcts_player.cpp  mcts_player.h  moves_getter.h  player.h  tests.h
